Feature #77 and translated dropdown labels for update routine

--- a/lib/l10n/locales/app_de.arb
+++ b/lib/l10n/locales/app_de.arb
@@ -5,15 +5,16 @@
     "theme" : "Design",
     "light" : "hell",
     "dark" : "dunkel",
-    "update" : "Aktualisierung",
+    "automaticUpdate" : "Automatische Aktualisierung",
     "updateText" : "Wie oft soll die App nach Updates suchen?",
+    "never" : "niemals",
     "daily" : "täglich",
     "weekly" : "wöchentlich",
     "monthly" : "monatlich",
     "lastTime" : "Letzte Überprüfung",
-    "updateNow" : "Jetzt aktualisieren",
+    "checkNow" : "Jetzt überprüfen",
     "languages" : "Sprachen",
-    "languagesText" : "Dies sind die verfügbaren Sprachen. Du kannst sie manuell herunterladen, löschen und aktualieren. Nutze das Häkchen, um einzustellen, welche Sprachen von der app automatisch aktualisiert werden sollen..",
+    "languagesText" : "Dies sind die verfügbaren Sprachen. Du kannst sie manuell herunterladen, löschen und aktualieren. Nutze das Häkchen, um einzustellen, welche Sprachen von der App automatisch aktualisiert werden sollen.",
     "language" : "Sprache",
     "state" : "Status",
     "diskUsage" : "Speicherverbrauch"
