--- a/lib/l10n/locales/app_en.arb
+++ b/lib/l10n/locales/app_en.arb
@@ -5,13 +5,14 @@
     "theme" : "Theme",
     "light" : "light",
     "dark" : "dark",
-    "update" : "Update",
+    "automaticUpdate" : "Automatic Updates",
     "updateText" : "How often should the app check for updates?",
+    "never" : "never",
     "daily" : "daily",
     "weekly" : "weekly",
     "monthly" : "monthly",
     "lastTime" : " Last check:",
-    "updateNow" : "Update now",
+    "checkNow" : "Check now",
     "languages" : "Languages",
     "languagesText" : "These are the languages available. You can download, delete or update them manually. Use the checkbox to set which languages should be updated automatically by the app.",
     "language" : "Language",
