--- a/lib/l10n/locales/app_de.arb
+++ b/lib/l10n/locales/app_de.arb
@@ -17,5 +17,8 @@
     "languagesText" : "Dies sind die verfügbaren Sprachen. Du kannst sie manuell herunterladen, löschen und aktualieren. Nutze das Häkchen, um einzustellen, welche Sprachen von der App automatisch aktualisiert werden sollen.",
     "language" : "Sprache",
     "state" : "Status",
-    "diskUsage" : "Speicherverbrauch"
+    "diskUsage" : "Speicherverbrauch",
+    "warning" : "Warnung",
+    "cannotDelete" : "Du kannst die aktuelle Sprache nicht löschen. Wechsle zunächst die Sprache und versuche es dann erneut.",
+    "close" : "Schließen"
 }
