Show full language names (settings page, menu)
Language names are localized according to the app language. Only
exception is the app language setting, there we have the autonyms
(English, Deutsch).

--- a/lib/l10n/locales/app_de.arb
+++ b/lib/l10n/locales/app_de.arb
@@ -1,7 +1,7 @@
 {
     "title": "Einstellungen",
     "appearance" : "Darstellung",
-    "appLanguage" : "App Sprache",
+    "appLanguage" : "App-Sprache",
     "theme" : "Design",
     "light" : "hell",
     "dark" : "dunkel",
@@ -14,8 +14,42 @@
     "lastTime" : "Letzte Überprüfung",
     "checkNow" : "Jetzt überprüfen",
     "languages" : "Sprachen",
-    "languagesText" : "Dies sind die verfügbaren Sprachen. Du kannst sie manuell herunterladen, löschen und aktualieren. Nutze das Häkchen, um einzustellen, welche Sprachen von der App automatisch aktualisiert werden sollen.",
+    "languagesText" : "Dies sind die verfügbaren Sprachen. Du kannst sie manuell herunterladen, aktualisieren und löschen.",
     "language" : "Sprache",
+    "language_tr": "Türkisch",
+    "language_zh": "Chinesisch",
+    "language_vi": "Vietnamesisch",
+    "language_ro": "Rumänisch",
+    "language_ky": "Kirgisisch",
+    "language_pl": "Polnisch",
+    "language_id": "Indonesisch",
+    "language_xh": "Xhosa",
+    "language_uz": "Usbekisch",
+    "language_af": "Afrikaans",
+    "language_ta": "Tamil",
+    "language_sr": "Serbisch",
+    "language_ms": "Malaiisch",
+    "language_az": "Aserbaidschanisch",
+    "language_ti": "Tigrinya",
+    "language_sw": "Suaheli",
+    "language_nb": "Norwegisch",
+    "language_ku": "Kurmandschi",
+    "language_sv": "Schwedisch",
+    "language_ml": "Malayalam",
+    "language_hi": "Hindi",
+    "language_lg": "Luganda",
+    "language_kn": "Kannada",
+    "language_it": "Italienisch",
+    "language_cs": "Tschechisch",
+    "language_fa": "Persisch",
+    "language_ar": "Arabisch",
+    "language_ru": "Russisch",
+    "language_nl": "Niederländisch",
+    "language_fr": "Französisch",
+    "language_es": "Spanisch",
+    "language_sq": "Albanisch",
+    "language_en": "Englisch",
+    "language_de": "Deutsch",
     "state" : "Status",
     "diskUsage" : "Speicherverbrauch",
     "warning" : "Warnung",
