--- a/lib/l10n/locales/app_en.arb
+++ b/lib/l10n/locales/app_en.arb
@@ -14,11 +14,45 @@
     "lastTime" : " Last check:",
     "checkNow" : "Check now",
     "languages" : "Languages",
-    "languagesText" : "These are the languages available. You can download, delete or update them manually. Use the checkbox to set which languages should be updated automatically by the app.",
+    "languagesText" : "These are the languages available. You can download, update or delete them manually.",
     "language" : "Language",
+    "language_tr": "Turkish",
+    "language_zh": "Chinese",
+    "language_vi": "Vietnamese",
+    "language_ro": "Romanian",
+    "language_ky": "Kyrgyz",
+    "language_pl": "Polish",
+    "language_id": "Indonesian",
+    "language_xh": "Xhosa",
+    "language_uz": "Uzbek",
+    "language_af": "Afrikaans",
+    "language_ta": "Tamil",
+    "language_sr": "Serbian",
+    "language_ms": "Malay",
+    "language_az": "Azerbaijani",
+    "language_ti": "Tigrinya",
+    "language_sw": "Swahili",
+    "language_nb": "Norwegian",
+    "language_ku": "Kurmanji",
+    "language_sv": "Swedish",
+    "language_ml": "Malayalam",
+    "language_hi": "Hindi",
+    "language_lg": "Luganda",
+    "language_kn": "Kannada",
+    "language_it": "Italian",
+    "language_cs": "Czech",
+    "language_fa": "Persian",
+    "language_ar": "Arabic",
+    "language_ru": "Russian",
+    "language_nl": "Dutch",
+    "language_fr": "French",
+    "language_es": "Spanish",
+    "language_sq": "Albanian",
+    "language_en": "English",
+    "language_de": "German",
     "state" : "State",
     "diskUsage" : "Disk usage",
     "warning" : "Warning",
-    "cannotDelete" : "You can't delete the language, that's currently selected. Switch language and try again.",
+    "cannotDelete" : "You can't delete the language that is currently selected. Switch language and try again.",
     "close" : "Close"
 }
