--- a/lib/l10n/locales/app_en.arb
+++ b/lib/l10n/locales/app_en.arb
@@ -86,16 +86,46 @@
             }
         }
     },
-    "downloadedNLanguages": "{count} languages downloaded",
+    "downloadedNLanguages": "{count} languages downloaded{error, plural, =0{} other{, {error} failed}}",
     "@downloadedNLanguages": {
-        "description": "Snackbar message after clicking on the button to download all languages and >1 language were downloaded",
+        "description": "Snackbar message after clicking on the button to download all languages and >1 language were downloaded. Or if at least one download failed",
         "placeholders": {
             "count": {
+                "type": "num",
+                "format": "compact"
+            },
+            "error": {
                 "type": "num",
                 "format": "compact"
             }
         }
     },
+    "downloadError": "Download failed. Please try again later.",
+    "updatedLanguage": "{languageName} is now up-to-date",
+    "@updatedLanguage": {
+        "description": "Snackbar info message",
+        "placeholders": {
+            "languageName": {
+                "type": "String",
+                "example": "German (de)"
+            }
+        }
+    },
+    "updatedNLanguages": "{count} languages updated{error, plural, =0{} other{, {error} failed}}",
+    "@updatedNLanguages": {
+        "description": "Snackbar message after clicking on the button to update all languages and >1 language were updated. Or if at least one update failed",
+        "placeholders": {
+            "count": {
+                "type": "num",
+                "format": "compact"
+            },
+            "error": {
+                "type": "num",
+                "format": "compact"
+            }
+        }
+    },
+    "updateError": "Update failed. Please try again later.",
     "nUpdatesAvailable": "{count, plural, =0{Languages are already up-to-date} =1{Language update available} other{Updates available in {count} languages}}",
     "@nUpdatesAvailable": {
         "description": "Whether updates are available in 0, 1 or more languages",
@@ -106,5 +136,5 @@
             }
         }
     },
-    "errorCheckingUpdates": "Error while checking updates. Please try again later"
+    "checkingUpdatesError": "Error while checking updates. Please try again later"
 }
