Refactoring: l10n message names; diskUsageProvider
Move calculation of combined disk usage out of UI into a
diskUsageProvider.
Re-order and rename some l10n message names for more clarity.

--- a/lib/l10n/locales/app_de.arb
+++ b/lib/l10n/locales/app_de.arb
@@ -1,22 +1,24 @@
 {
-    "title": "Einstellungen",
-    "appearance" : "Darstellung",
+    "settings": "Einstellungen",
     "appLanguage" : "App-Sprache",
-    "theme" : "Design",
-    "light" : "hell",
-    "dark" : "dunkel",
-    "automaticUpdate" : "Automatische Aktualisierung",
-    "updateText" : "Wie oft soll die App nach Updates suchen?",
+    "languages" : "Sprachen",
+    "languagesText" : "Dies sind die verfügbaren Sprachen. Du kannst sie manuell herunterladen, aktualisieren und löschen.",
+    "allLanguages" : "Alle Sprachen",
+    "updates" : "Aktualisierungen",
+    "@updates" : {
+        "description": "Headline on the settings page"
+    },
+    "checkFrequency" : "Wie oft soll die App nach Updates suchen?",
     "never" : "niemals",
     "daily" : "täglich",
     "weekly" : "wöchentlich",
     "monthly" : "monatlich",
-    "lastTime" : "Letzte Überprüfung",
+    "lastCheck" : "Letzte Überprüfung:",
     "checkNow" : "Jetzt überprüfen",
-    "languages" : "Sprachen",
-    "languagesText" : "Dies sind die verfügbaren Sprachen. Du kannst sie manuell herunterladen, aktualisieren und löschen.",
-    "allLanguages" : "Alle Sprachen",
-    "language" : "Sprache",
+    "appearance" : "Darstellung",
+    "theme" : "Design",
+    "light" : "hell",
+    "dark" : "dunkel",
     "language_tr": "Türkisch",
     "language_zh": "Chinesisch",
     "language_vi": "Vietnamesisch",
@@ -51,7 +53,6 @@
     "language_sq": "Albanisch",
     "language_en": "Englisch",
     "language_de": "Deutsch",
-    "state" : "Status",
     "diskUsage" : "Speicherverbrauch",
     "warning" : "Warnung",
     "cannotDelete" : "Du kannst die aktuelle Sprache nicht löschen. Wechsle zunächst die Sprache und versuche es dann erneut.",
