--- a/lib/l10n/locales/app_en.arb
+++ b/lib/l10n/locales/app_en.arb
@@ -1,22 +1,24 @@
 {
-    "title": "Settings",
-    "appearance" : "Appearance",
+    "settings": "Settings",
     "appLanguage" : "App language",
-    "theme" : "Theme",
-    "light" : "light",
-    "dark" : "dark",
-    "automaticUpdate" : "Automatic Updates",
-    "updateText" : "How often should the app check for updates?",
+    "languages" : "Languages",
+    "languagesText" : "These are the languages available. You can download, update or delete them manually.",
+    "allLanguages" : "Alle Sprachen",
+    "updates" : "Updates",
+    "@updates" : {
+        "description": "Headline on the settings page"
+    },
+    "checkFrequency" : "How often should the app check for updates?",
     "never" : "never",
     "daily" : "daily",
     "weekly" : "weekly",
     "monthly" : "monthly",
-    "lastTime" : " Last check:",
+    "lastCheck" : "Last check:",
     "checkNow" : "Check now",
-    "languages" : "Languages",
-    "languagesText" : "These are the languages available. You can download, update or delete them manually.",
-    "allLanguages" : "Alle Sprachen",
-    "language" : "Language",
+    "appearance" : "Appearance",
+    "theme" : "Theme",
+    "light" : "light",
+    "dark" : "dark",
     "language_tr": "Turkish",
     "language_zh": "Chinese",
     "language_vi": "Vietnamese",
@@ -51,7 +53,6 @@
     "language_sq": "Albanian",
     "language_en": "English",
     "language_de": "German",
-    "state" : "State",
     "diskUsage" : "Disk usage",
     "warning" : "Warning",
     "cannotDelete" : "You can't delete the language that is currently selected. Switch language and try again.",
