Improve user experience for DeleteLanguageButton
If the user tries to delete the currently selected language, give a
warning and let him confirm if he really wants to do that. Also the icon
is greyed out for that language.

--- a/lib/l10n/locales/app_de.arb
+++ b/lib/l10n/locales/app_de.arb
@@ -68,8 +68,9 @@
     "language_de": "Deutsch",
     "diskUsage" : "Speicherverbrauch",
     "warning" : "Warnung",
-    "cannotDelete" : "Du kannst die aktuelle Sprache nicht löschen. Wechsle zunächst die Sprache und versuche es dann erneut.",
-    "close" : "Schließen",
+    "warnBeforeDelete" : "Du versuchst, die aktuell ausgewählte App-Sprache zu löschen. Bist du sicher?",
+    "cancel": "Abbrechen",
+    "delete": "Löschen",
     "deletedLanguage": "{languageName} wurde gelöscht",
     "@deletedLanguage": {
         "description": "Snackbar info message",
