Move language selection to AppBar
Remove UpwardExtensionTile in the main menu. Instead have a language
selection button directly in the top right of the app. This way it's
easier accessible.

--- a/lib/l10n/locales/app_de.arb
+++ b/lib/l10n/locales/app_de.arb
@@ -151,5 +151,9 @@
             }
         }
     },
-    "checkingUpdatesError": "Fehler beim Überprüfen auf Updates. Bitte versuche es später noch einmal."
+    "checkingUpdatesError": "Fehler beim Überprüfen auf Updates. Bitte versuche es später noch einmal.",
+    "languageSelectionHeader": "Seite anzeigen auf:",
+    "@languageSelectionHeader": {
+        "description": "Text shown before the list of languages when users taps the language selection button"
+    }
 }
