--- a/lib/l10n/locales/app_en.arb
+++ b/lib/l10n/locales/app_en.arb
@@ -259,5 +259,18 @@
                 "type": "String"
             }
         }
-    }
+    },
+    "about": "About",
+    "appDescription": "This is the app of the https://www.4training.net website. Our goal is to provide you with great resources in many languages.",
+    "matthew10_8": "Matthew 10:8, “Freely you have received; freely give.”",
+    "noCopyright": "All contents are without any copyright. Use them and share them!",
+    "trustworthy": "Trustworthy",
+    "trustworthyText": "This app does no tracking, shows no adverts and doesn't send any information anywhere. As you may have noticed it doesn't need any permissions.",
+    "worksOffline": "Works offline",
+    "worksOfflineText": "After you downloaded the languages you're interested in, the app doesn't need an internet connection. You'll only need internet if you want to check for updates or download another language.",
+    "contributing": "Contributing",
+    "contributingText": "Many people contributed their time, skills and resources to make this vision happen. Thank you! There is many areas and ways you can contribute: Translating, programming, design, correcting errors, ... Please write us at contact@4training.net - we're happy to hear your ideas and feedback!",
+    "openSource": "Open Source",
+    "openSourceText": "This app is open source. You have the freedom to use it, study it, share it and improve it. Sourcecode and more information: https://github.com/4training/app4training",
+    "version": "Version"
 }
